--- a/src/pages/pubs/journals.mdx
+++ b/src/pages/pubs/journals.mdx
@@ -1,7 +1,12 @@
 <ol reversed>
 
-<li>Hashmi, M.S.A., Qadri, A.M., Raza, A., Ullah, S., Smerat, A., Kim, C., <b>Syafrudin, M.*</b>, Fitriyani, N.L. (2025) VGGBM-Net: A Novel Pixel-Based Transfer Features Engineering for Automated Coffee Bean Diseases Classification. IEEE Access 2025, 13, 83580–83590, doi:10.1109/ACCESS.2025.3569078. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ACCESS.2025.3569078'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:8AbLer7MMksC'>[GoogleScholar]</a></li>
+<li>Badar, W., Ramzan, S., Raza, A., Fitriyani, N.L., <b>Syafrudin, M.*</b>, Lee, S.W. (2025) Enhanced Interpretable Forecasting of Cryptocurrency Prices Using Autoencoder Features and a Hybrid CNN-LSTM Model. Mathematics 2025, 13, 1908, doi:10.3390/math13121908. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math13121908'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[GoogleScholar]</a></li>
 
+<li>Jabeen, M., Ramzan, S., Raza, A., Fitriyani, N.L., <b>Syafrudin, M.*</b>, Lee, S.W. (2025) Enhanced Credit Card Fraud Detection Using Deep Hybrid CLST Model. Mathematics 2025, 13, 1950, doi:10.3390/math13121950.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math13121950'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[GoogleScholar]</a></li>
+
+<li>Hassan, A., Ramzan, S., Raza, A., Munwar Iqbal, M., Smerat, A., Latif Fitriyani, N., <b>Syafrudin, M.*</b>, Won Lee, S. (2025) Improving Thyroid Disorder Diagnosis via Innovative Stacking Ensemble Learning Model. DIGITAL HEALTH 2025, 11, 20552076251341430, doi:10.1177/20552076251341430.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1177/20552076251341430'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[GoogleScholar]</a></li>
+
+<li>Hashmi, M.S.A., Qadri, A.M., Raza, A., Ullah, S., Smerat, A., Kim, C., <b>Syafrudin, M.*</b>, Fitriyani, N.L. (2025) VGGBM-Net: A Novel Pixel-Based Transfer Features Engineering for Automated Coffee Bean Diseases Classification. IEEE Access 2025, 13, 83580–83590, doi:10.1109/ACCESS.2025.3569078. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ACCESS.2025.3569078'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:8AbLer7MMksC'>[GoogleScholar]</a></li>
 <li>Naseer, A., Raza, A., Afzal, H., Smerat, A., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2025) Human Pose Estimation in Physiotherapy Fitness Exercise Correction Using Novel Transfer Learning Approach. PeerJ Computer Science 2025, 11, e2854, doi:10.7717/peerj-cs.2854. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.7717/peerj-cs.2854'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:geHnlv5EZngC'>[GoogleScholar]</a></li>
 <li>Chainando, N., Martawidjaja, M., Darius, R. A., Yahya, L. C., Yemima, S., Tan, W. S., Harito, C., Chandra, R. C., Andhini, G. K., Putra, K. B., Lumban Tobing, C. C., Syafi’i, M., & <b>Syafrudin, M.</b> (2025) Applying 3D Scanning and Printing Techniques to Produce Upper Limb Prostheses: Bibliometric Analysis and Scoping Review. Prosthesis, 7(2), 26. https://doi.org/10.3390/prosthesis7020026 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/prosthesis7020026'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:4fKUyHm3Qg0C'>[GoogleScholar]</a></li>
 <li>Yousafzai, S.N., Nasir, I.M., Tehsin, S., Malik, D.S., Keshta, I., Fitriyani, N.L., Gu, Y. and <b>Syafrudin, M.*</b> (2025) Multi-Stage Neural Network-based Ensemble Learning Approach for Wheat Leaf Disease Classification. IEEE Access 2025, 13, 30101–30116, doi:10.1109/ACCESS.2025.3541347 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ACCESS.2025.3541347'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:vRqMK49ujn8C'>[GoogleScholar]</a></li>
