--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -41,7 +41,7 @@ import Colabs from './colabs.mdx'
 <br/>
 <b>Kurnia Fahmy Ilmawan</b>, <i>Universitas Tidar, Indonesia</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/info15080499'>J49</a>]
 <br/>
-<b>Aries Susanty</b>, <i>Universitas Diponegoro, Indonesia</i> | Publications: [Under-review]
+<b>Aries Susanty</b>, <i>Universitas Diponegoro, Indonesia</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi:10.1038/s41598-025-94625-7'>J73</a>]
 <br/>
 <b>Taufiq Asyhari</b>, <i>Monash University, Indonesia</i>
 <br/>
