--- a/src/pages/pubs/journals.mdx
+++ b/src/pages/pubs/journals.mdx
@@ -1,5 +1,8 @@
 <ol reversed>
 
+
+<li>Yousafzai, S.N., Nasir, I.M., Saidani, O., Ghodhbani, R., Gu, Y., <b>Syafrudin, M.*</b>, Fitriyani, N.L. (2025) A Multi-Scale Simplicial Transformer with Graph Attention for Facial Emotion Recognition. Ain Shams Engineering Journal 2025, 16, 103584, doi:10.1016/j.asej.2025.103584 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.asej.2025.103584'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[GoogleScholar]</a></li>
+
 <li>Susanty, A., Puspitasari, N.B., Siahaan, G.S., Setiawan, S., <b>Syafrudin, M.</b> (2025) Factors Influencing the Intention of Textile and Garment SMEs to Adopt Digital Technologies and Its Impact on Performance. Sci Rep 2025, 15, 20807, https://doi.org/10.1038/s41598-025-94625-7 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1038/s41598-025-94625-7'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[GoogleScholar]</a></li>
 
 <li>Hadibarata, T., <b>Syafrudin, M.<sup>†</sup></b>, Fitriyani, N.L., Lee, S.W. (2025) Advancements in Composting Technologies for Efficient Soil Remediation of Polycyclic Aromatic Hydrocarbons (PAHs): A Mini Review. Sustainability 2025, 17, 5881, doi:10.3390/su17135881. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/su17135881'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:eJXPG6dFmWUC'>[GoogleScholar]</a></li>
