--- a/src/pages/director_cv.mdx
+++ b/src/pages/director_cv.mdx
@@ -1,6 +1,47 @@
-<iframe
-  src="https://drive.google.com/file/d/1BF7EO3GAAZWY_UggB8HarfQtzreVjue1/preview"
-  style={{ width: '100%', height: '100vh', border: 'none' }}
-  allow="autoplay"
->
-</iframe>
+import React from 'react';
+
+const PDFViewer = () => (
+  <div className="pdf-container">
+    <iframe 
+      src="https://drive.google.com/file/d/1BF7EO3GAAZWY_UggB8HarfQtzreVjue1/preview"
+      width="100%"
+      height="100%"
+      style={{
+        border: 'none',
+        overflow: 'hidden',
+        position: 'absolute',
+        top: 0,
+        left: 0,
+        right: 0,
+        bottom: 0
+      }}
+      scrolling="no"
+      allow="autoplay"
+    />
+  </div>
+);
+
+export const components = {
+  PDFViewer
+};
+
+/* CSS */
+.pdf-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+
+.ndfHFb-c4YZDc-Wrql6b{
+  display:none !important;
+}
+/* Make sure parent containers don't limit the iframe */
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: rgb(255, 255, 255) !important;
+}
