--- a/src/pages/director_cv.mdx
+++ b/src/pages/director_cv.mdx
@@ -1,6 +1,6 @@
 <iframe
   src="https://drive.google.com/file/d/1BF7EO3GAAZWY_UggB8HarfQtzreVjue1/preview"
-  style={{ width: '100%', height: '100vh', border: 'none', background-color: 'white' }}
+  style={{ width: '100%', height: '100vh', border: 'none', backgroundColor: 'white' }}
   allow="autoplay"
 >
 </iframe>
