--- a/src/pages/pubs/journals.mdx
+++ b/src/pages/pubs/journals.mdx
@@ -1,5 +1,7 @@
 <ol reversed>
 
+<li>Al-Dulaimi, A.A., Guneser, M.T., Al-Shabandar, R., Gu, Y., <b>Syafrudin, M.*</b>, Fitriyani, N.L. (2025) AE-BPNN: Autoencoder and Backpropagation Neural Network-Based Model for Lithium-Ion Battery State of Health Estimation. Scientific Reports 2025, 15, 29193, doi:10.1038/s41598-025-12771-4 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1038/s41598-025-12771-4'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href=''>[GoogleScholar]</a></li>
+<li>Fatima, N., Yousafzai, S.N., Nemri, N., Alsolai, H., Ebad, S.A., Sorour, S., Gu, Y., <b>Syafrudin, M.*</b>, Fitriyani, N.L. (2025) Time Series AQI Forecasting Using Kalman-Integrated Bi-GRU and Chi-Square Divergence Optimization. Scientific Reports 2025, 15, 29157, doi:10.1038/s41598-025-12422-8. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1038/s41598-025-12422-8'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:kRWSkSYxWN8C'>[GoogleScholar]</a></li>
 <li>Fitriyani, N.L., <b>Syafrudin, M.<sup>†</sup></b>, Chamidah, N., Rifada, M., Susilo, H., Aydin, D., Qolbiyani, S.L., Lee, S.W. (2025) A Novel Approach Utilizing Bagging, Histogram Gradient Boosting, and Advanced Feature Selection for Predicting the Onset of Cardiovascular Diseases. Mathematics 2025, 13, 2194. https://doi.org/10.3390/math13132194 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math13132194'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:q3oQSFYPqjQC'>[GoogleScholar]</a></li>
 <li>Yousafzai, S.N., Nasir, I.M., Saidani, O., Ghodhbani, R., Gu, Y., <b>Syafrudin, M.*</b>, Fitriyani, N.L. (2025) A Multi-Scale Simplicial Transformer with Graph Attention for Facial Emotion Recognition. Ain Shams Engineering Journal 2025, 16, 103584, doi:10.1016/j.asej.2025.103584 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.asej.2025.103584'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:D_sINldO8mEC'>[GoogleScholar]</a></li>
 <li>Susanty, A., Puspitasari, N.B., Siahaan, G.S., Setiawan, S., <b>Syafrudin, M.</b> (2025) Factors Influencing the Intention of Textile and Garment SMEs to Adopt Digital Technologies and Its Impact on Performance. Sci Rep 2025, 15, 20807, https://doi.org/10.1038/s41598-025-94625-7 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1038/s41598-025-94625-7'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:BrmTIyaxlBUC'>[GoogleScholar]</a></li>
