--- a/src/pages/pubs/journals.mdx
+++ b/src/pages/pubs/journals.mdx
@@ -1,9 +1,8 @@
 <ol reversed>
 
-<li>Khalid, S., Ramzan, S., Iqbal, M.M., Raza, A., Smerat, A., Hosseinzadeh, M., Kim, C., <b>Syafrudin, M.</b>, Fitriyani, N.L.* (2025) Tab Transformer with Meta-Ensemble Learning Approaches for Enhanced Diabetes Prediction. PeerJ Computer Science 2025, 11, e3206, doi:10.7717/peerj-cs.3206.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.7717/peerj-cs.3206'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href=''>[GoogleScholar]</a></li>
+<li>Khalid, S., Ramzan, S., Iqbal, M.M., Raza, A., Smerat, A., Hosseinzadeh, M., Kim, C., <b>Syafrudin, M.</b>, Fitriyani, N.L.* (2025) Tab Transformer with Meta-Ensemble Learning Approaches for Enhanced Diabetes Prediction. PeerJ Computer Science 2025, 11, e3206, doi:10.7717/peerj-cs.3206.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.7717/peerj-cs.3206'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:wbdj-CoPYUoC'>[GoogleScholar]</a></li>
 <li>Khalid, S., Ramzan, S., Iqbal, M.M., Thalji, N., Raza, A., Smerat, A., Kim, C., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2025) Harnessing Interpretable Novel Combination of GloVe Embedding with Deep CNN-BiLSTM Neural Network for Fake News Detection. PLoS One 2025, 20, e0330154, doi:10.1371/journal.pone.0330154.
-<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1371/journal.pone.0330154'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href=''>[GoogleScholar]</a></li>
-
+<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1371/journal.pone.0330154'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:J-pR_7NvFogC'>[GoogleScholar]</a></li>
 <li>Naseeb, S., Ramzan, S., Raza, A., Shadab Alam Hashmi, M., Gu, Y., <b>Syafrudin, M.*</b>, Latif Fitriyani, N. (2025) Website Phishing Attack Detection Using Innovative Meta Learning-Based Ensemble Approach. IEEE Access 2025, 13, 164249–164264, doi:10.1109/ACCESS.2025.3610961.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ACCESS.2025.3610961'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&pagesize=100&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:1qzjygNMrQYC'>[GoogleScholar]</a></li>
 <li>Fatima, N., Alshahrani, H.M., Dafaalla, H., Allafi, R., Kim, C., <b>Syafrudin, M.*</b>, Fitriyani, N.L. (2025) Integrating Machine Learning Models With Probability Distribution Methods for Extreme Flood Risk Assessment. IEEE Access 2025, 13, 160922–160938, doi:10.1109/ACCESS.2025.3598121<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ACCESS.2025.3598121'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&pagesize=100&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:V3AGJWp-ZtQC'>[GoogleScholar]</a></li>
 <li>Al-Dulaimi, A.A., Guneser, M.T., Al-Shabandar, R., Gu, Y., <b>Syafrudin, M.*</b>, Fitriyani, N.L. (2025) AE-BPNN: Autoencoder and Backpropagation Neural Network-Based Model for Lithium-Ion Battery State of Health Estimation. Scientific Reports 2025, 15, 29193, doi:10.1038/s41598-025-12771-4 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1038/s41598-025-12771-4'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&pagesize=100&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:mvPsJ3kp5DgC'>[GoogleScholar]</a></li>
