Add Narmeen Fatima to team page
Added Narmeen's profile, research interests, email, and publication links to the team page. Also added her profile image to the static assets.

--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -79,6 +79,16 @@ Research interest: Machine learning, cyber security
 </div>
 </div>
 
+<div class="row">
+<div class="col col--2"><img src="/team/Narmeen_2025.jpg"/></div>
+<div class="col col--10">
+<h3>Narmeen Fatima</h3>
+Research interest: Applications of ML/DL on the Environment, Climate Change, Hydrology, Sustainability, Air Quality Forecasting, and Flood Management
+<br/>Email: narmeen[at]aintlab.com
+<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=10.1038/s41598-025-12422-8'>J76</a>, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=10.1109/ACCESS.2025.3598121'>J78</a>]
+</div>
+</div>
+
 
 ### <highlight  color="#04be58">Alumni</highlight>
 
