--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -85,7 +85,7 @@ Research interest: Machine learning, cyber security
 <h3>Narmeen Fatima</h3>
 Research interest: Applications of ML/DL on the Environment, Climate Change, Hydrology, Sustainability, Air Quality Forecasting, and Flood Management
 <br/>Email: narmeen[at]aintlab.com
-<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=10.1038/s41598-025-12422-8'>J76</a>, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=10.1109/ACCESS.2025.3598121'>J78</a>]
+<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=10.1038/s41598-025-12422-8'>J76</a>], [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=10.1109/ACCESS.2025.3598121'>J78</a>]
 </div>
 </div>
 
