Update branding and descriptions for AINTLab site
Revised meta descriptions, alt text, and branding references from 'intelligent networks' to 'intelligent systems' across HTML and component files. Updated styles and scripts references for build output. These changes improve consistency in lab messaging and update static assets for the latest build.

--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -3,7 +3,7 @@ title: Contact
 ---
 
 # Contact
-- Applied INTelligence Lab (AINTLab) - 아인트랩
+- Applied INTelligence Lab (AINTLab)
 - E-mail: <highlight color="#1877F2">udin [at] sejong.ac.kr</highlight>
 - Phone: +82-2-3408-1879
 - Addressess:
