Switch images to webp, add video backgrounds
Replaced PNG and JPG images with webp format for better performance and updated references throughout the codebase. Added video backgrounds to homepage and recent updates section, including new video assets and related CSS for improved visual presentation. Updated some text and links for clarity and consistency.

--- a/src/pages/colabs.mdx
+++ b/src/pages/colabs.mdx
@@ -1,7 +1,7 @@
 
 <i>Explore the collaboration map from the past five years by clicking on the following map.</i><br/>
 <a href="https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin/network-map#network-map-container" target="_blank">
-<img src="/team/collaboration_map.png"/>
+<img src="/team/collaboration_map.webp"/>
 </a><br/>
 
 :::tip Call for Collaboration
