--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -5,7 +5,7 @@ title: Contact
 # Contact
 - Applied INTelligence Lab (AINTLab)
 - E-mail: <highlight color="#1877F2">udin [at] sejong.ac.kr</highlight>
-- Phone: +82-2-3408-1879
+- Phone: 02-3408-1879
 - Addressess:
 	- (🇰🇷) Applied INTelligence Lab (AINTLab), Seoul 05006, Republic of Korea
 	- (🇮🇩) Applied INTelligence Lab (AINTLab), Yogyakarta 55187, Indonesia
