Add new journal publication to list
Added a 2025 Scientific Reports article on wheat leaf disease classification to the journals page, including citation and external links.

--- a/src/pages/pubs/journals.mdx
+++ b/src/pages/pubs/journals.mdx
@@ -1,5 +1,7 @@
 <ol reversed>
 
+<li>Razaq, A., Ramzan, S., Ali, B., Raza, A., Gu, Y., <b>Syafrudin, M.*</b>, & Latif Fitriyani, N. (2025). Novel dual-input stream-based hybrid approach for wheat leaf disease classification using edge-aware features. Scientific Reports, 15(1), 42091. https://doi.org/10.1038/s41598-025-26123-9<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1038/s41598-025-26123-9'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[GoogleScholar]</a></li>
+
 <li>Nasir, N., Ramzan, S., Ali, B., Jabbar, S., Raza, A., Kim, C., <b>Syafrudin, M.*</b>, & Fitriyani, N. L. (2025). Interpretable deep multimodal-based tomato disease diagnosis and severity estimation. Scientific Reports, 15(1), 37919. https://doi.org/10.1038/s41598-025-21611-4<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1038/s41598-025-21611-4'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:5ugPr518TE4C'>[GoogleScholar]</a></li>
 <li>Khalid, S., Ramzan, S., Iqbal, M.M., Raza, A., Smerat, A., Hosseinzadeh, M., Kim, C., <b>Syafrudin, M.</b>, Fitriyani, N.L.* (2025) Tab Transformer with Meta-Ensemble Learning Approaches for Enhanced Diabetes Prediction. PeerJ Computer Science 2025, 11, e3206, doi:10.7717/peerj-cs.3206.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.7717/peerj-cs.3206'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:wbdj-CoPYUoC'>[GoogleScholar]</a></li>
 <li>Khalid, S., Ramzan, S., Iqbal, M.M., Thalji, N., Raza, A., Smerat, A., Kim, C., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2025) Harnessing Interpretable Novel Combination of GloVe Embedding with Deep CNN-BiLSTM Neural Network for Fake News Detection. PLoS One 2025, 20, e0330154, doi:10.1371/journal.pone.0330154.
