--- a/src/pages/project_list.mdx
+++ b/src/pages/project_list.mdx
@@ -1,9 +1,14 @@
 
 ### Current
-- Development Simulation Model in Industry Using Hybrid Approaches (Bina Nusantara University’s BINUS International Research/PIB, 2025, *Foreign Collaborator*)
-- Rock Cutting Detection System Based on Artificial Intelligence in Oil and Gas Drilling Activities (Gadjah Mada University's Academic Excellence Improvement Program, 2025, *Foreign Collaborator*)
+
+-	Joint Supervision of Two Magister Student and publication of comprehensive analysis of pharmaceutical companies (World Class Program Diponegoro University (WCU) Endowment Fund Funding Higher Education - Enhancing Quality Education For International University Recognition (EQUITY) 2025 Batch I, 2025~2026, *Foreign Collaborator*)
+-	Integration of Internet of Things Sensors and Deep Learning-Based Image Analysis for Struck Pipe Prediction in Geothermal and Oil and Gas Drilling (Research Funding Assistance that Supports QS Improvement by Subject – Scheme Output Original Article, EQUITY WCU Mandatory Scheme, Vocational School, Gadjah Mada University, 2025~2026, *Foreign Collaborator*)
+-	Development of a Hybrid RFID-NFC-QR Smart Livestock Monitoring System with IoT Methane Gas Sensor Integration to Support Food Security (Research Funding Assistance that Supports QS Improvement by Subject – Scheme Output Original Article, EQUITY WCU Mandatory Scheme, Vocational School, Gadjah Mada University, 2025~2026, *Foreign Collaborator*)
+
 
 ### Past 
+- Development Simulation Model in Industry Using Hybrid Approaches (Bina Nusantara University’s BINUS International Research/PIB, 2025, *Foreign Collaborator*)
+- Rock Cutting Detection System Based on Artificial Intelligence in Oil and Gas Drilling Activities (Gadjah Mada University's Academic Excellence Improvement Program, 2025, *Foreign Collaborator*)
 - A Prediction and Optimization Model of Sugarcane Yield for Improving the Productivity of Sugar Industry in Indonesia (Bina Nusantara University’s BINUS International Research—Applied, 2024, *Foreign Collaborator*)
 - Development of 3D Printed based Partial Finger Prosthesis Adjusted to Patient Skin Colour (Bina Nusantara University’s BINUS International Research—Applied, 2024, *Foreign Collaborator*)
 - Digital system design and sustainable supply chain performance optimization for rice commodity in eastern Indonesia (Bina Nusantara University’s BINUS International Research—Applied, 2023, *Foreign Collaborator*)
