Update team and logo images, add prospective page
Added new team member images. Removed outdated images. Introduced a new 'prospective' page.

--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -26,9 +26,17 @@ import Colabs from './colabs.mdx'
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.1016/j.compag.2024.109706'>J60</a>],
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi:10.1109/ACCESS.2025.3541347'>J65</a>]
 <br/>
+<b>Armughan Ali</b>, <i>AINTLab Researcher</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=https://doi.org/10.3390/math13030449'>J64</a>]
+<br/>
+<b>Hooria Shahbaz</b>, <i>AINTLab Researcher</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=https://doi.org/10.3390/math13030449'>J64</a>]
+<br/>
+<b>Muhammad Shahzaib Toor</b>, <i>AINTLab Researcher</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=https://doi.org/10.3390/math13030449'>J64</a>]
+<br/>
+<b>Narmeen Fatima</b>, <i>AINTLab Researcher</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=10.1038/s41598-025-12422-8'>J76</a>], [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=10.1109/ACCESS.2025.3598121'>J78</a>]
+<br/>
 <br/>
 
-### <highlight  color="#0184c6">Visiting Researchers/Professors</highlight>
+### <highlight  color="#0184c6">Visiting Professors/Researchers</highlight>
 
 <b>Muhammad Rifqi Maarif</b>, <i>Universitas Tidar, Indonesia</i> | Publications: 
 [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi:10.3390/app13010037'>J26</a>],
@@ -42,6 +50,8 @@ import Colabs from './colabs.mdx'
 <b>Kurnia Fahmy Ilmawan</b>, <i>Universitas Tidar, Indonesia</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/info15080499'>J49</a>]
 <br/>
 <b>Aries Susanty</b>, <i>Universitas Diponegoro, Indonesia</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.1038/s41598-025-94625-7'>J73</a>]
+<br/>
+<b>Nur Chamidah</b>, <i>Universitas Airlangga , Indonesia</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/math13132194'>J75</a>]
 <br/>
 <b>Taufiq Asyhari</b>, <i>Monash University, Indonesia</i>
 <br/>
