--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -3,12 +3,13 @@ title: Team
 ---
 
 import Colabs from './colabs.mdx'
+import Link from '@docusaurus/Link'
 
 # Team
 
 ### <highlight  color="#04be58">Director</highlight>
 <div class="row">
-<div class="col col--2"><img src="/team/Muhammad_Syafrudin.jpg"/></div>
+<div class="col col--2"><img src="/team/Director.png"/></div>
 
 <div class="col col--10">
 <h3>Muhammad Syafrudin (샤프루딘 교수)</h3>
@@ -40,61 +41,29 @@ import Colabs from './colabs.mdx'
 
 ### <highlight  color="#0184c6">Master/PhD</highlight>
 
-
-:::info Admission Information
-<i>For detailed information on the admissions procedure, requirements, and scholarships, please refer to the following link: <a href="https://sos.sejong.ac.kr/eng/admission/guide/grad1.do" target="_blank">https://sos.sejong.ac.kr/eng/admission/guide/grad1.do</a> </i> 
-<br/>Informasi Beasiswa LPDP Indonesia: <a href="https://s.aintlab.com/LPDP-SJU-2025" target="_blank">https://s.aintlab.com/LPDP-SJU-2025</a>
-:::
-
-
-### <highlight  color="#980606">AINTLab Researcher</highlight>
-
 <div class="row">
-<div class="col col--2"><img src="/team/ArmughanAli_2025.jpg"/></div>
+<div class="col col--2"><img src="/team/LongchengLi.png"/></div>
 <div class="col col--10">
-<h3>Armughan Ali</h3>
-Research interest: Medical Imaging, NLP, Agriculture, Sustainable IT
-<br/>Email: armughan[at]aintlab.com
-<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=https://doi.org/10.3390/math13030449'>J64</a>]
+<h3>Longcheng Li</h3>
+<i>Prospective MS, Fall 2026</i>
+<br/>Research interest: Explainable AI, Deep Learning, Industry AI
 </div>
 </div>
 
 <div class="row">
-<div class="col col--2"><img src="/team/HOORIASHAHBAZ_2025.jpg"/></div>
+<div class="col col--2"><img src="/team/WangXiaodi.png"/></div>
 <div class="col col--10">
-<h3>Hooria Shahbaz</h3>
-Research interest: Medical Imaging, NLP, Explainable AI, Deep Learning
-<br/>Email: hooria[at]aintlab.com
-<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=https://doi.org/10.3390/math13030449'>J64</a>]
+<h3>Wang Xiaodi</h3>
+<i>Prospective MS, Fall 2026</i>
+<br/>Research interest: Explainable Artificial Intelligence, Multimodal Data Analysis, Applied AI
 </div>
 </div>
-
-<div class="row">
-<div class="col col--2"><img src="/team/MuhammadShahzaibToor_2025.jpg"/></div>
-<div class="col col--10">
-<h3>Muhammad Shahzaib Toor</h3>
-Research interest: Machine learning, cyber security
-<br/>Email: toor[at]aintlab.com
-<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=https://doi.org/10.3390/math13030449'>J64</a>]
-</div>
-</div>
-
-<div class="row">
-<div class="col col--2"><img src="/team/Narmeen_2025.jpg"/></div>
-<div class="col col--10">
-<h3>Narmeen Fatima</h3>
-Research interest: Applications of ML/DL on the Environment, Climate Change, Hydrology, Sustainability, Air Quality Forecasting, and Flood Management
-<br/>Email: narmeen[at]aintlab.com
-<br/>Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=10.1038/s41598-025-12422-8'>J76</a>], [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=10.1109/ACCESS.2025.3598121'>J78</a>]
-</div>
-</div>
-
+<i>If you are interested to join with us, please read the <Link to="/prospective">Guidelines for Prospective Students.</Link></i>
+<br/>
+<br/>
 
 ### <highlight  color="#04be58">Alumni</highlight>
 
 :::info Acknowledgment
 *AINTLab's success is due to the critical support of individuals who contributed to innovative research and shared their expertise. Please find them <a target='_blank' alt='alumni page' rel='noopener noreferrer' href='https://aintlab.com/alumni'>here.</a>*
 :::
-
-### <highlight  color="#980606">Collaborator Network Map</highlight>
-<Colabs />
