--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -9,7 +9,7 @@ title: Contact
 - Addressess:
 	- (🇰🇷) Applied INTelligence Lab (AINTLab), Seoul 05006, Republic of Korea
 	- (🇮🇩) Applied INTelligence Lab (AINTLab), Yogyakarta 55187, Indonesia
-- 교수실: 05006 서울특별시 광진구 능동로 209, 대양AI센터 502호
+- 교수실: 05006 서울특별시 광진구 능동로 209(군자동) 세종대학교
 	
 <div class="map-responsive">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.1382684578657!2d127.07144581532079!3d37.55180603272926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca4d0720eecc1%3A0x1a7ad975c6b5e4eb!2sSejong%20University!5e0!3m2!1sen!2skr!4v1664505677205!5m2!1sen!2skr" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
