--- a/src/pages/project_list.mdx
+++ b/src/pages/project_list.mdx
@@ -1,9 +1,10 @@
 
 ### Current
 
--	Joint Supervision of Two Magister Student and publication of comprehensive analysis of pharmaceutical companies (World Class Program Diponegoro University (WCU) Endowment Fund Funding Higher Education - Enhancing Quality Education For International University Recognition (EQUITY) 2025 Batch I, 2025~2026, *Foreign Collaborator*)
--	Integration of Internet of Things Sensors and Deep Learning-Based Image Analysis for Struck Pipe Prediction in Geothermal and Oil and Gas Drilling (Research Funding Assistance that Supports QS Improvement by Subject – Scheme Output Original Article, EQUITY WCU Mandatory Scheme, Vocational School, Gadjah Mada University, 2025~2026, *Foreign Collaborator*)
--	Development of a Hybrid RFID-NFC-QR Smart Livestock Monitoring System with IoT Methane Gas Sensor Integration to Support Food Security (Research Funding Assistance that Supports QS Improvement by Subject – Scheme Output Original Article, EQUITY WCU Mandatory Scheme, Vocational School, Gadjah Mada University, 2025~2026, *Foreign Collaborator*)
+-	Independent research on CKD Detection with AI (Airlangga University, 2025~2026, *Foreign Collaborator*))
+-	Joint Supervision of Two Magister Student and publication of comprehensive analysis of pharmaceutical companies (World Class University (WCU) Program 2025 Batch I, Diponegoro University, 2025~2026, *Foreign Collaborator*)
+-	Integration of Internet of Things Sensors and Deep Learning-Based Image Analysis for Struck Pipe Prediction in Geothermal and Oil and Gas Drilling (WCU Mandatory Scheme, Gadjah Mada University, 2025~2026, *Foreign Collaborator*)
+-	Development of a Hybrid RFID-NFC-QR Smart Livestock Monitoring System with IoT Methane Gas Sensor Integration to Support Food Security (WCU Mandatory Scheme, Gadjah Mada University, 2025~2026, *Foreign Collaborator*)
 
 
 ### Past 
