--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -58,7 +58,7 @@ import Link from '@docusaurus/Link'
 <br/>Research interest: Explainable Artificial Intelligence, Multimodal Data Analysis, Applied AI
 </div>
 </div>
-<i>If you are interested to join with us, please read the <Link to="/prospective">Guidelines for Prospective Students.</Link></i>
+<i>If you are interested in joining us, please read the <Link to="/prospective">Guidelines for Prospective Students.</Link></i>
 <br/>
 <br/>
 
