--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -51,11 +51,12 @@ import Colabs from './colabs.mdx'
 <br/>
 <b>Aries Susanty</b>, <i>Universitas Diponegoro, Indonesia</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.1038/s41598-025-94625-7'>J73</a>]
 <br/>
-<b>Nur Chamidah</b>, <i>Universitas Airlangga , Indonesia</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/math13132194'>J75</a>]
-<br/>
 <b>Taufiq Asyhari</b>, <i>Monash University, Indonesia</i>
 <br/>
-
+<b>Nur Chamidah</b>, <i>Universitas Airlangga , Indonesia</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/math13132194'>J75</a>]
+<br/>
+<b>Marisa Rifada</b>, <i>Universitas Airlangga , Indonesia</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/math13132194'>J75</a>]
+<br/>
 <br/>
 
 ### <highlight  color="#980606">Collaborator Network Map</highlight>
