--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -46,7 +46,7 @@ import Link from '@docusaurus/Link'
 <div class="col col--10">
 <h3>Longcheng Li</h3>
 <i>Prospective MS, Fall 2026</i>
-<br/>Research interest: Explainable AI, Deep Learning, Industry AI
+<br/>Research interests: Explainable AI, Deep Learning, Industry AI
 </div>
 </div>
 
@@ -55,7 +55,7 @@ import Link from '@docusaurus/Link'
 <div class="col col--10">
 <h3>Wang Xiaodi</h3>
 <i>Prospective MS, Fall 2026</i>
-<br/>Research interest: Explainable Artificial Intelligence, Multimodal Data Analysis, Applied AI
+<br/>Research interests: Explainable Artificial Intelligence, Multimodal Data Analysis, Applied AI
 </div>
 </div>
 <i>If you are interested in joining us, please read the <Link to="/prospective">Guidelines for Prospective Students.</Link></i>
