--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -65,5 +65,5 @@ import Link from '@docusaurus/Link'
 ### <highlight  color="#04be58">Alumni</highlight>
 
 :::info Acknowledgment
-*AINTLab's success is due to the critical support of individuals who contributed to innovative research and shared their expertise. Please find them <a target='_blank' alt='alumni page' rel='noopener noreferrer' href='https://aintlab.com/alumni'>here.</a>*
+*AINTLab's success is due to the critical support of individuals who contributed to innovative research and shared their expertise. Please find them <Link to="/alumni">here.</Link>*
 :::
