--- a/src/pages/colabs.mdx
+++ b/src/pages/colabs.mdx
@@ -1,7 +1,7 @@
 
 <i>Explore the collaboration map from the past five years by clicking on the following map.</i><br/>
 <a href="https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin/network-map#network-map-container" target="_blank">
-<img src="/team/collaboration_map.webp"/>
+<img src="/team/collaboration_map.png"/>
 </a><br/>
 
 :::tip Call for Collaboration
