Update branding assets and add new team member
Replaced and added favicon and images

--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -17,11 +17,6 @@ import Link from '@docusaurus/Link'
 <br/>Department of Artificial Intelligence and Data Science, Sejong University, Korea
 <br/><a href="/contact">Contact</a> | ORCID: <a href="https://orcid.org/0000-0002-5640-4413" target="_blank">0000-0002-5640-4413</a>
 <br/>
-<h4>Academic Background</h4>
-<ul>
-<li>Dr.Eng. (Dongguk University, Korea)</li>
-<li>B.Eng. (UIN Sunan Kalijaga, Indonesia)</li>
-</ul>
 
 <h4>Professional Experience</h4>
 <ul>
@@ -58,6 +53,16 @@ import Link from '@docusaurus/Link'
 <br/>Research interests: Explainable Artificial Intelligence, Multimodal Data Analysis, Applied AI
 </div>
 </div>
+
+<div class="row">
+<div class="col col--2"><img src="/team/ZhenghaoZhao.png"/></div>
+<div class="col col--10">
+<h3>Zhenghao Zhao</h3>
+<i>Prospective MS, Fall 2026</i>
+<br/>Research interests: Industrial IoT, Industrial AI
+</div>
+</div>
+
 <i>If you are interested in joining us, please read the <Link to="/prospective">Guidelines for Prospective Students.</Link></i>
 <br/>
 <br/>
