--- a/src/pages/pubs/journals.mdx
+++ b/src/pages/pubs/journals.mdx
@@ -1,4 +1,5 @@
 <ol reversed>
+<li>Alfian, G., Saputra, Y. M., Ramadhani, W. D., Atmaji, F. T. D., Farooq, U., Benes, F., Fitriyani, N. L., & <b>Syafrudin, M.*</b> (2026). Multi-step-ahead forecasting of bike-sharing demand using multilayer perceptron model with additional timestamp features. PeerJ Computer Science, 12, e3472. https://doi.org/10.7717/peerj-cs.3472<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.7717/peerj-cs.3472'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[GoogleScholar]</a></li>
 
 <li>Razaq, A., Ramzan, S., Ali, B., Raza, A., Gu, Y., <b>Syafrudin, M.*</b>, & Fitriyani, N. L. (2025). Novel dual-input stream-based hybrid approach for wheat leaf disease classification using edge-aware features. Scientific Reports, 15(1), 42091. https://doi.org/10.1038/s41598-025-26123-9<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1038/s41598-025-26123-9'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:bnK-pcrLprsC'>[GoogleScholar]</a></li>
 <li>Nasir, N., Ramzan, S., Ali, B., Jabbar, S., Raza, A., Kim, C., <b>Syafrudin, M.*</b>, & Fitriyani, N. L. (2025). Interpretable deep multimodal-based tomato disease diagnosis and severity estimation. Scientific Reports, 15(1), 37919. https://doi.org/10.1038/s41598-025-21611-4<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1038/s41598-025-21611-4'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:5ugPr518TE4C'>[GoogleScholar]</a></li>
