--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -53,6 +53,12 @@ import Colabs from './colabs.mdx'
 <br/>
 <b>Taufiq Asyhari</b>, <i>Monash University, Indonesia</i>
 <br/>
+<b>Ali Raza</b>, <i>SKKU, Korea</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=10.1109/ACCESS.2025.3610961'>J79</a>],
+[<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=10.1371/journal.pone.0330154'>J80</a>],
+[<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=10.7717/peerj-cs.3206'>J81</a>],
+[<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.1038/s41598-025-21611-4'>J82</a>],
+[<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.1038/s41598-025-26123-9'>J83</a>]
+<br/>
 <b>Nur Chamidah</b>, <i>Universitas Airlangga , Indonesia</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/math13132194'>J75</a>]
 <br/>
 <b>Marisa Rifada</b>, <i>Universitas Airlangga , Indonesia</i> | Publications: [<a target='_blank' alt='link' rel='noopener noreferrer' href='https://aintlab.com/publications#:~:text=doi.org/10.3390/math13132194'>J75</a>]
